# elite-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: configuration.md  maddy.md  security.md
elite_agent/: __main__.py  config.py  digest.py  llm.py  outbox.py  pipeline.py  sanitize.py  security.py
elite_agent/brains/: __init__.py  base.py
elite_agent/brains/olympic/: __init__.py  cards.py  classify.py
elite_agent/brains/olympic/cards/: TEMPLATE.md  agassi-open-avoidance.md  biles-tokyo-withdrawal.md  phelps-beijing-goggles.md  sale-pelletier-judging.md
elite_agent/mail/: __init__.py  imap_client.py  smtp_client.py
examples/: cron.example  profile.env.example
tests/: fakes.py  test_brain.py  test_cards.py  test_config.py  test_llm.py  test_mail.py  test_no_personal_data.py  test_outbox.py  test_pipeline.py  test_sanitize.py  test_security.py
tests/fixtures/: bulk_list.eml  dmarc_fail.eml  html.eml  injection.eml  multipart_attachment.eml  plain.eml
