[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elite-agent"
version = "0.1.0"
description = "Modular email agent: IMAP ingest → coaching brain routing → LLM draft → SMTP reply"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "elite_agent contributors", email = "developers@example.com"}
]

[project.scripts]
elite-agent = "elite_agent.__main__:main"

[tool.setuptools.package-data]
elite_agent = ["brains/olympic/cards/*.md"]
